--- a/index.html
+++ b/index.html
@@ -3,8 +3,64 @@
   <head>
     <meta charset="utf-8">
     <title>Wikipedia, the free encyclopedia</title>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div class="sidebar">
+      <img src="img/enwiki.png" alt="Wiki Logo with title and text" width="160px" height="160px"/>
+      <p>
+        <ul>
+          <li><a href="#">Main page</a></li>
+          <li><a href="#">Contents</a></li>
+          <li><a href="#">Featured content</a></li>
+          <li><a href="#">Current events</a></li>
+          <li><a href="#">Random article</a></li>
+          <li><a href="#">Donate to Wikipedia</a></li>
+          <li><a href="#">Wikipedia store</a></li>
+        </ul>
+        <p class="nobox">
+          Interaction
+        </p>
+        <ul>
+          <li><a href="#">Main page</a></li>
+          <li><a href="#">Contents</a></li>
+          <li><a href="#">Featured content</a></li>
+          <li><a href="#">Current events</a></li>
+          <li><a href="#">Random article</a></li>
+          <li><a href="#">Donate to Wikipedia</a></li>
+          <li><a href="#">Wikipedia store</a></li>
+        </ul>
+      </p>
+      <p class="nobox">
+        Interaction
+      </p>
+      <ul>
+        <li><a href="#">Main page</a></li>
+        <li><a href="#">Contents</a></li>
+        <li><a href="#">Featured content</a></li>
+        <li><a href="#">Current events</a></li>
+        <li><a href="#">Random article</a></li>
+        <li><a href="#">Donate to Wikipedia</a></li>
+        <li><a href="#">Wikipedia store</a></li>
+      </ul>
+    </p>
+    <p class="nobox">
+      Interaction
+    </p>
+    <ul>
+      <li><a href="#">Main page</a></li>
+      <li><a href="#">Contents</a></li>
+      <li><a href="#">Featured content</a></li>
+      <li><a href="#">Current events</a></li>
+      <li><a href="#">Random article</a></li>
+      <li><a href="#">Donate to Wikipedia</a></li>
+      <li><a href="#">Wikipedia store</a></li>
+    </ul>
+  </p>
+    </div>
+    <div class="container">
 
+    </div>
   </body>
 </html>
