--- a/index.html
+++ b/index.html
@@ -7,60 +7,136 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="sidebar">
-      <img src="img/enwiki.png" alt="Wiki Logo with title and text" width="160px" height="160px"/>
-      <p>
-        <ul>
-          <li><a href="#">Main page</a></li>
-          <li><a href="#">Contents</a></li>
-          <li><a href="#">Featured content</a></li>
-          <li><a href="#">Current events</a></li>
-          <li><a href="#">Random article</a></li>
-          <li><a href="#">Donate to Wikipedia</a></li>
-          <li><a href="#">Wikipedia store</a></li>
-        </ul>
-        <p class="nobox">
-          Interaction
-        </p>
-        <ul>
-          <li><a href="#">Main page</a></li>
-          <li><a href="#">Contents</a></li>
-          <li><a href="#">Featured content</a></li>
-          <li><a href="#">Current events</a></li>
-          <li><a href="#">Random article</a></li>
-          <li><a href="#">Donate to Wikipedia</a></li>
-          <li><a href="#">Wikipedia store</a></li>
-        </ul>
-      </p>
-      <p class="nobox">
-        Interaction
-      </p>
-      <ul>
-        <li><a href="#">Main page</a></li>
-        <li><a href="#">Contents</a></li>
-        <li><a href="#">Featured content</a></li>
-        <li><a href="#">Current events</a></li>
-        <li><a href="#">Random article</a></li>
-        <li><a href="#">Donate to Wikipedia</a></li>
-        <li><a href="#">Wikipedia store</a></li>
-      </ul>
-    </p>
-    <p class="nobox">
-      Interaction
-    </p>
-    <ul>
-      <li><a href="#">Main page</a></li>
-      <li><a href="#">Contents</a></li>
-      <li><a href="#">Featured content</a></li>
-      <li><a href="#">Current events</a></li>
-      <li><a href="#">Random article</a></li>
-      <li><a href="#">Donate to Wikipedia</a></li>
-      <li><a href="#">Wikipedia store</a></li>
-    </ul>
-  </p>
-    </div>
     <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <div class="sidebar">
+          <img src="img/enwiki.png" alt="Wiki Logo with title and text" width="160px" height="160px"/>
+          <p>
+            <ul>
+              <li><a href="#">Main page</a></li>
+              <li><a href="#">Contents</a></li>
+              <li><a href="#">Featured content</a></li>
+              <li><a href="#">Current events</a></li>
+              <li><a href="#">Random article</a></li>
+              <li><a href="#">Donate to Wikipedia</a></li>
+              <li><a href="#">Wikipedia store</a></li>
+            </ul>
+          <p class="nobox">
+            Interaction
+          </p>
+            <hr>
+            <ul>
+              <li><a href="#">Main page</a></li>
+              <li><a href="#">Contents</a></li>
+              <li><a href="#">Featured content</a></li>
+              <li><a href="#">Current events</a></li>
+              <li><a href="#">Random article</a></li>
+              <li><a href="#">Donate to Wikipedia</a></li>
+              <li><a href="#">Wikipedia store</a></li>
+            </ul>
+          </p>
+          <p class="nobox">
+            Interaction
+          </p>
+          <ul>
+            <li><a href="#">Main page</a></li>
+            <li><a href="#">Contents</a></li>
+            <li><a href="#">Featured content</a></li>
+            <li><a href="#">Current events</a></li>
+            <li><a href="#">Random article</a></li>
+            <li><a href="#">Donate to Wikipedia</a></li>
+            <li><a href="#">Wikipedia store</a></li>
+          </ul>
+          </p>
+          <p class="nobox">
+            Interaction
+          </p>
+          <ul>
+            <li><a href="#">Main page</a></li>
+            <li><a href="#">Contents</a></li>
+            <li><a href="#">Featured content</a></li>
+            <li><a href="#">Current events</a></li>
+            <li><a href="#">Random article</a></li>
+            <li><a href="#">Donate to Wikipedia</a></li>
+            <li><a href="#">Wikipedia store</a></li>
+          </ul>
+          </p>
+        </div>
+      </div>
+      <div class="col-md-10">
+          <div class="row">
+            <!--top nav bar-->
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="row">
+                <div class="col-md-3">
+                  <h1>Welcome to <a href="#">Wikipedia</a></h1>
+                  <p>
+                    the free encyclopedia that anyone can edit.
+                    5,402,462 articles in English
+                  </p>
+                </div>
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-2">
+                  <ul>
+                    <li>Arts</li>
+                    <li>Biography</li>
+                    <li>Geography</li>
+                  </ul>
+                </div>
+                <div class="col-md-2">
+                  <ul>
+                    <li>History</li>
+                    <li>Mathematics</li>
+                    <li>Science</li>
+                  </ul>
+                </div>
+                <div class="col-md-2">
+                  <ul>
+                    <li>History</li>
+                    <li>Mathematics</li>
+                    <li>Science</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+              <div class="row">
+                <div class="col-md-7">
+                  <div class="panel panel-success">
+                    <div class="panel-heading">
+                      <h2 class="panel-title">From today's featured article</h2>
+                    </div>
+                      <div class="panel-body">
+                          <img class="lefty" src="img/soccer.jpg" alt="photo of badass soccer player"/>
+                          <!--<footer>Belgium playing Algeria at the 2014 World Cup</footer>-->
+                          <p>
+                            The Belgian national football team has represented Belgium in association football since their maiden match in 1904. The squad is supervised by the Royal Belgian Football Association, stands under the global jurisdiction of FIFA and is governed in Europe by UEFA. Most of their home games are played at the King Baudouin Stadium in Brussels. <em>The squad</em> has been known as the Red Devils since 1906; its fan club is named "1895". Belgium has long-standing football rivalries with its Dutch and French counterparts, <a href="#">donkey</a> having played both teams nearly every year from 1905 to 1967. Periods of regular Belgian representation at the highest international level, from 1920 to 1938, and 1970 to 2002, have alternated with mostly unsuccessful qualification rounds. The national team played in three Olympic football tournaments, including the one in 1920, which they won. They achieved victories over four reigning world champions—West Germany, Brazil, Argentina and France—between 1954 and 2002. Belgium topped the FIFA World Rankings for the first time in November 2015. They are competing in the European qualifiers for the 2018 World Cup, which will run until October 2017. (Full article...)
+                          </p>
+                          <p class="righty">
+                            <ul>
+                              Recently featured:
+                              <li class="inline"><a href="#">John Sherman</a></li>
+                              <li class="inline"><a href="#">Dr. Jekyll and Mr. Hyde (1887 play)</a></li>
+                              <li class="inline"><a href="#">White-rumped swallow</a></li>
+                            </ul>
+                          </p>
+                          <p class="righty">
+                            Archive By email More featured articles...
+                          </p>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+                <div class="col-md-5">
 
-    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
   </body>
 </html>
