add more classes and column content and ruined indentation

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="panel-body">
               <div class="row">
                 <div class="col-md-3">
-                  <h1>Welcome to <a href="#">Wikipedia</a></h1>
+                  <h1>Welcome to <a href="#">Shitiwikipedia</a></h1>
                   <p>
                     the free encyclopedia that anyone can edit.
                     5,402,462 articles in English
@@ -129,9 +129,84 @@
                           </p>
                         </div>
                       </div>
+
+                      <div class="panel panel-success">
+                        <div class="panel-heading">
+                          <h2 class="panel-title">From today's featured article</h2>
+                        </div>
+                          <div class="panel-body">
+                              <img class="righty" src="img/soccer.jpg" alt="photo of badass soccer player"/>
+                              <!--<footer>Belgium playing Algeria at the 2014 World Cup</footer>-->
+                              <p>
+                                <ul>
+                                  <li>                              that the flag of Weihaiwei (pictured) was redesigned to include Mandarin ducks, as it was felt inappropriate to have a Chinese imperial dragon on a British flag?
+                                  </li>
+                                  <li>                              ... that the lascivious lyrics of The Band's "Jemima Surrender" inspired Naomi Weisstein to form the Chicago Women's Liberation Rock Band?
+                                  </li>
+                                  <li>                              ... that Anne Penfold Street, one of Australia's leading mathematicians, earned bachelor's and master's degrees in chemistry before switching to mathematics?
+                                  </li>
+                                  <li>                              ... that the Guatemalan labor organization Committee for Peasant Unity once led a strike that forced a minimum wage increase of nearly 200%?
+                                  </li>
+                                  <li>                              ... that French singer-songwriter Indila, who has described herself as a "child of the world", is of Algerian, Cambodian, Egyptian, and Indian descent?
+                                  </li>
+                                  <li>                              ... that the Kurşunlu Mosque and Complex hosts a museum that exhibits handmade meerschaum pipes?
+                                  </li>
+                                  <li>                              ... that E. S. Raja Gopal held the position of a CSIR emeritus scientist at both the National Physical Laboratory of India and the Indian Institute of Science?
+                                  </li>
+                                  <li>                              ... that in 2007, the Pennsylvania Supreme Court ruled that a sperm donor was not obligated to pay child support?
+                                  </li>
+                                </ul>
+
+
+
+                              </p>
+                              <p class="righty">
+                                <ul>
+                                  Recently featured:
+                                  <li class="inline"><a href="#">John Sherman</a></li>
+                                  <li class="inline"><a href="#">Dr. Jekyll and Mr. Hyde (1887 play)</a></li>
+                                  <li class="inline"><a href="#">White-rumped swallow</a></li>
+                                </ul>
+                              </p>
+                              <p class="righty">
+                                Archive By email More featured articles...
+                              </p>
+                            </div>
+                          </div>
+
+
+
                   </div>
-                </div>
+
+
+
                 <div class="col-md-5">
+                  <div class="panel panel-info">
+                    <div class="panel-heading">
+                      <h2 class="panel-title">From today's featured article</h2>
+                    </div>
+                      <div class="panel-body">
+                          <img class="righty" src="img/soccer.jpg" alt="photo of badass soccer player"/>
+                          <!--<footer>Belgium playing Algeria at the 2014 World Cup</footer>-->
+                          <p>
+                            <ul>
+                              <li>                              that the flag of Weihaiwei (pictured) was redesigned to include Mandarin ducks, as it was felt inappropriate to have a Chinese imperial dragon on a British flag?
+                              </li>
+                              <li>                              ... that the lascivious lyrics of The Band's "Jemima Surrender" inspired Naomi Weisstein to form the Chicago Women's Liberation Rock Band?
+                              </li>
+                              <li>                              ... that Anne Penfold Street, one of Australia's leading mathematicians, earned bachelor's and master's degrees in chemistry before switching to mathematics?
+                              </li>
+                              <li>                              ... that the Guatemalan labor organization Committee for Peasant Unity once led a strike that forced a minimum wage increase of nearly 200%?
+                              </li>
+                              <li>                              ... that French singer-songwriter Indila, who has described herself as a "child of the world", is of Algerian, Cambodian, Egyptian, and Indian descent?
+                              </li>
+                              <li>                              ... that the Kurşunlu Mosque and Complex hosts a museum that exhibits handmade meerschaum pipes?
+                              </li>
+                              <li>                              ... that E. S. Raja Gopal held the position of a CSIR emeritus scientist at both the National Physical Laboratory of India and the Indian Institute of Science?
+                              </li>
+                              <li>                              ... that in 2007, the Pennsylvania Supreme Court ruled that a sperm donor was not obligated to pay child support?
+                              </li>
+                            </ul>
 
                 </div>
               </div>
